--- a/index.html
+++ b/index.html
@@ -42,7 +42,6 @@
         <script type="text/javascript" src="js/perfect-scrollbar-0.4.5.with-mousewheel.min.js"></script>
         <script type="text/javascript" src="js/jquery.nicescroll.min.js"></script>
 
-
         <script type="text/javascript" src="js/magnific-popup.js"></script>
         <script type="text/javascript" src="js/custom.js"></script>
 
@@ -157,7 +156,7 @@
                     <div class="pagecontents">
                         <div class="section color-3">
                             <div class="section-container">
-                                <div class="row">
+                                <div class="row" >
                                     <div class="col-md-9 col-md-offset-1">
                                         <div class="title text-center"><a id ="exp"></a>
                                             <h3>Work Experiences</h3>
@@ -334,7 +333,7 @@
                                                                 </br>
                                                                 </div>
                                                                 <div class="pubdetails">
-                                                                    <h4>Abstract</h4>
+                                                                    <h4 style="color:black">Abstract</h4>
                                                                     <p style="color:black">We propose an eXplainable Risk Ranking (XRR) model that uses multilevel encoders and attention mechanisms to analyze financial risks among companies. In specific, the proposed method utilizes the textual information in financial reports to rank the relative risks among companies and locate top high-risk companies; moreover, via attention mechanisms, XRR enables to highlight the critical words and sentences within financial reports that are most likely to influence financial risk and thus boasts better model interpretability. Experimental results evaluated on 10-K financial reports show that XRR significantly outperforms several baselines, yielding up to 7.4% improvement in terms of two ranking correlation metrics. Furthermore, in our experiments, the model interpretability is evaluated by using finance-specific sentiment lexicons at word level and an annotated reference list at the sentence level to examine the learned attention models.</p>
                                                                 </div>
                                                             </div>
@@ -357,7 +356,7 @@
                                                                     
                                                                 </div>
                                                                 <div class="pubdetails">
-                                                                    <h4>Abstract</h4>
+                                                                    <h4 style="color:black">Abstract</h4>
                                                                     <p style="color:black">In this paper, we propose a two-stage ranking approach for recommending linear TV programs. The proposed approach first leveragesuser viewing patterns regarding time and TV channels to identify potential candidates for recommendation and then further leveragesuser preferences to rank these candidates given textual information about programs. To evaluate the method, we conduct empirical studieson a real-world TV dataset, the results of which demonstrate the superior performance of our model in terms of both recommendationaccuracy and time efficiency.</p>
                                                                 </div>
                                                             </div>
