--- a/index.html
+++ b/index.html
@@ -44,7 +44,6 @@
 
         <script type="text/javascript" src="js/magnific-popup.js"></script>
         <script type="text/javascript" src="js/custom.js"></script>
-
         <!--/Javascript files-->
 
     </head>
@@ -64,7 +63,6 @@
                             </div>   
                         </div>
                         <!-- /Profile/logo section-->
-
                         <!-- Main navigation-->
                         <div id="main-nav">
                             <ul id="navigation">
@@ -158,7 +156,7 @@
                             <div class="section-container">
                                 <div class="row" >
                                     <div class="col-md-9 col-md-offset-1">
-                                        <div class="title text-center"><a id ="exp"></a>
+                                        <div class="title text-center"><a name="exp" id ="exp"></a>
                                             <h3>Work Experiences</h3>
                                         </div>
                                         <ul class="timeline">
@@ -405,12 +403,34 @@
                                             <p>Our code is publicly available <a href="https://github.com/jackyjackylin/codes.fin.attention">here</a></p>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-sm-4 col-md-3">
+                                                <div class="image">
+                                                    <img alt="image" src="img/JooyIn.pdf" class="img-responsive">
+                                                    <div class="imageoverlay">
+                                                        <i class="fa fa-search"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-8 col-md-9">
+                                                <div class="meta">
+                                                    <h3 style="color:black">JooyIn</h3>
+                                                    <p style="color:black">JooyIn is a social network application app. We hope that with the power of the Internet, friends can exercise in groups anytime, anywhere, so that the power of the online network can spread offline, and at the same time, we can make new friends through sports！</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="details" style="color:black">
+                                            <p>Developed full-stack social networking platform for users to initiate exercise groups in real-time by using Node.js, express, Firebase RealTime database, Facebook Login, and Google Map API</p>
+                                            <p>Applied Socket.io to create chat rooms for users in each exercise group to evaluate experience</p>
+                                            <p>Our code is publicly available <a href="https://github.com/jackyjackylin/JooyIn">here</a></p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>                            
                     </div>
                 </div>
-
             </div>
         </div>
     <!-- Default code for Personal website 
@@ -431,4 +451,3 @@
     <!-- End of Code -->
     </body>
 </html>
-
