add contact form

--- a/index.html
+++ b/index.html
@@ -48,7 +48,6 @@
 
     </head>
     <body>
-
         <div id="wrapper">
             <a href="#sidebar" class="mobilemenu"><i class="fa fa-reorder"></i></a>
             <div id="sidebar">
@@ -98,7 +97,7 @@
                                   </a>
                                 </li>
                                 <li>
-                                  <a href="contact.html">
+                                  <a href="#contact">
                                       <i class="fa fa-calendar"></i>
                                       <div class="text">Contact Me</div>
                                   </a>
@@ -328,7 +327,7 @@
                                                                     <h4 class="pubtitle" style="color:black">“The Cat is Out of the Bag” Explainable Risk Ranking with Financial Reports</h4>
                                                                     <div class="pubauthor" style="color:black"><strong>Lin, Ting Wei.</strong>, Sun, Ruei Yao, Chang, Hsuan Ling, Wang, Chuan Ju, Tsai, Ming Feng</div>
                                                                     <div class="pubcite" style="color:black">The AAAI-20 Workshop on Knowledge Discovery from Unstructured Data in Financial Services. </br><span class="label label-info">Workshop Papers</span> New York, NY</div>
-                                                                </br>
+                                                                
                                                                 </div>
                                                                 <div class="pubdetails">
                                                                     <h4 style="color:black">Abstract</h4>
@@ -407,6 +406,34 @@
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
                                                 <div class="image">
+                                                    <img alt="image" src="img/tv.pdf" class="img-responsive">
+                                                    <div class="imageoverlay">
+                                                        <i class="fa fa-search"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-8 col-md-9">
+                                                <div class="meta">
+                                                    <h3 style="color:black">Personalized TV Recommendation</h3>
+                                                    <p style="color:black">A two-stage ranking approach for recommending linear TV program</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="details" style="color:black">
+    
+                                            <p>Conducted empirical studies on a real-world TV dataset and formally defined the problem of TV Rec</p>
+
+                                            <p>Proposed a two-stage ranking approach for TV Rec which consists of two components: one to model viewing behavior and the other for viewing preferences.</p>
+
+                                            <p>Demostrated our proposed approach consistently outperforms other baseline methods; more importantly, our two-stage ranking approach is parameter-free and efficient at inference, making it applicable and practical to real-world TV Rec scenarios.</p>
+
+                                            <p>To read the paper click <a href="paperPDF/paper_tv_rec.pdf">here</a>.
+                                        </div>
+                                    </li>
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-sm-4 col-md-3">
+                                                <div class="image">
                                                     <img alt="image" src="img/JooyIn.pdf" class="img-responsive">
                                                     <div class="imageoverlay">
                                                         <i class="fa fa-search"></i>
@@ -416,7 +443,7 @@
                                             <div class="col-sm-8 col-md-9">
                                                 <div class="meta">
                                                     <h3 style="color:black">JooyIn</h3>
-                                                    <p style="color:black">JooyIn is a social network application app. We hope that with the power of the Internet, friends can exercise in groups anytime, anywhere, so that the power of the online network can spread offline, and at the same time, we can make new friends through sports！</p>
+                                                    <p style="color:black">A social network application for users to make friends through launching exercise groups. </p>
                                                 </div>
                                             </div>
                                         </div>
@@ -426,28 +453,62 @@
                                             <p>Our code is publicly available <a href="https://github.com/jackyjackylin/JooyIn">here</a></p>
                                         </div>
                                     </li>
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-sm-4 col-md-3">
+                                                <div class="image">
+                                                    <img alt="image" src="img/beepay.pdf" class="img-responsive">
+                                                    <div class="imageoverlay">
+                                                        <i class="fa fa-search"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-8 col-md-9">
+                                                <div class="meta">
+                                                    <h3 style="color:black">BeePay</h3>
+                                                    <p style="color:black">A BLE (wireless) P2P Mobile Payment System</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="details" style="color:black">
+                                            <p>Proposed wireless network protocol using 3-way authentication, 2nd-party inspection, and RSA algorithm, ensuring complete data packet transport and avoiding double spending</p>
+                                            <p>Created BLE wireless mobile payment system, Beepay by using Google BLE4.0 API</p>
+                                            <p>Developed a back-end system platform for displaying transaction records or deposits and Streaming APIs by using Servlet & JSP and MySQL</p>
+                                        </div>
+                                    </li>
                                 </ul>
                             </div>
                         </div>                            
                     </div>
                 </div>
             </div>
-        </div>
-    <!-- Default code for Personal website 
-    -->
-    <script type="text/javascript">
-    var sc_project=12209819; 
-    var sc_invisible=1; 
-    var sc_security="b020d04a"; 
-    var sc_https=1; 
-    var sc_remove_link=1; 
-    </script>
-    <script type="text/javascript"
-    src="https://www.statcounter.com/counter/counter.js" async>
-    </script>
-    <noscript><div class="statcounter"><img class="statcounter"
-    src="https://c.statcounter.com/12209819/0/b020d04a/1/" alt="site
-    stats"></div></noscript>
+            <div class="section color-5">
+                <div class="container">
+                  <div style="text-align:center">
+                    <h2 id="contact">Contact Us</h2>
+                    <p>Swing by for a cup of coffee, or leave us a message:</p>
+                  </div>
+                  <div class="row">
+                    <div class="column">
+                      <img src="img/footer.jpg" style="width:100%">
+                    </div>
+                    <div class="column">
+                      <form action="mailto:tingwl3@uci.edu" method=”POST” enctype=”multipart/form-data” name=”EmailForm”>
+                        <label for="fname">First Name</label>
+                        <input type="text" id="fname" name="firstname" placeholder="Your name..">
+                        <label for="lname">Last Name</label>
+                        <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+                        <label for="subject">Subject</label>
+                        <textarea id="subject" name="subject" placeholder="Write something.." style="height:170px"></textarea>
+                        <input type="submit" value="Submit">
+                      </form>
+                    </div>
+                  </div>
+                </div>
+          </div>
+    </div>
+    <!-- Default code for Personal website -->
     <!-- End of Code -->
     </body>
 </html>
+
