--- a/index.html
+++ b/index.html
@@ -6,11 +6,9 @@
         <meta name="author" content="owwwlab.com">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
-        <meta name="description" content="Forough Arabshahi Personal Page" />
-        <meta name="keywords" content="Forough Arabshahi, Homepage, Machine Learning, ML, CMU, Carnegie Mellon University, University of California Irvine" />
-
-        <link rel="shortcut icon" href="../favicon.ico">
-
+        <meta name="description" content="Ting-Wei Lin personal page" />
+<!--         <link rel="shortcut icon" href="../favicon.ico">
+ -->
         <!--CSS styles-->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">  
@@ -23,7 +21,7 @@
         <!--/CSS styles-->
         <!--Javascript files-->
         <script type="text/javascript" src="js/jquery-1.11.3.min.js"></script>
-        <script src="http://code.jquery.com/jquery-1.9.1.js"></script>
+        <script src="https://code.jquery.com/jquery-1.9.1.js"></script>
         <script type="text/javascript" src="js/TweenMax.min.js"></script>
         <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
         <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
@@ -116,7 +114,8 @@
                         <div id="sidebar-footer">
                             <div class="social-icons">
                                 <ul>
-                                    <li><a href="https://www.facebook.com/profile.php?id=100002603712297"><i class="fa fa-facebook-square"></i></a></li>
+                                    <li><a href="
+                                        https://www.facebook.com/profile.php?id=100002603712297"><i class="fa fa-facebook-square"></i></a></li>
                                     <li><a href="https://www.linkedin.com/in/tingwei-lin/"><i class="fa fa-linkedin"></i></a></li>
                                     <li><a href="https://github.com/jackyjackylin"><i class="fa fa-github"></i></a></li>
                                 </ul>
@@ -449,7 +448,8 @@
                                         </div>
                                         <div class="details" style="color:black">
                                             <p>Developed full-stack social networking platform for users to initiate exercise groups in real-time by using Node.js, express, Firebase RealTime database, Facebook Login, and Google Map API</p>
-                                            <p>Applied Socket.io to create chat rooms for users in each exercise group to evaluate experience</p>
+                                            <p>Applied Socket.io to create chat rooms for users in each exercise group to 
+                                            evaluate experience</p>
                                             <p>Our code is publicly available <a href="https://github.com/jackyjackylin/JooyIn">here</a></p>
                                         </div>
                                     </li>
