change img type (.pdf to .jpeg

--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
         
         <meta name="description" content="Ting-Wei Lin personal page" />
-<!--         <link rel="shortcut icon" href="../favicon.ico">
- -->
+
         <!--CSS styles-->
         <link rel="stylesheet" href="css/bootstrap.css">
         <link rel="stylesheet" href="css/font-awesome.min.css">  
@@ -25,7 +24,6 @@
         <script type="text/javascript" src="js/TweenMax.min.js"></script>
         <script type="text/javascript" src="js/jquery.touchSwipe.min.js"></script>
         <script type="text/javascript" src="js/jquery.carouFredSel-6.2.1-packed.js"></script>
-        
         <script type="text/javascript" src="js/modernizr.custom.63321.js"></script>
         <script type="text/javascript" src="js/jquery.dropdownit.js"></script>
 
@@ -375,7 +373,7 @@
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
                                                 <div class="image">
-                                                    <img alt="image" src="img/XRR.pdf" class="img-responsive">
+                                                    <img alt="image" src="img/XRR.jpg" class="img-responsive">
                                                     <div class="imageoverlay">
                                                         <i class="fa fa-search"></i>
                                                     </div>
@@ -405,7 +403,7 @@
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
                                                 <div class="image">
-                                                    <img alt="image" src="img/tv.pdf" class="img-responsive">
+                                                    <img alt="image" src="img/tv.jpg" class="img-responsive">
                                                     <div class="imageoverlay">
                                                         <i class="fa fa-search"></i>
                                                     </div>
@@ -433,7 +431,7 @@
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
                                                 <div class="image">
-                                                    <img alt="image" src="img/JooyIn.pdf" class="img-responsive">
+                                                    <img alt="image" src="img/JooyIn.jpg" class="img-responsive">
                                                     <div class="imageoverlay">
                                                         <i class="fa fa-search"></i>
                                                     </div>
@@ -457,7 +455,7 @@
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
                                                 <div class="image">
-                                                    <img alt="image" src="img/beepay.pdf" class="img-responsive">
+                                                    <img alt="image" src="img/beepay.jpg" class="img-responsive">
                                                     <div class="imageoverlay">
                                                         <i class="fa fa-search"></i>
                                                     </div>
@@ -485,8 +483,8 @@
             <div class="section color-5">
                 <div class="container">
                   <div style="text-align:center">
-                    <h2 id="contact">Contact Us</h2>
-                    <p>Swing by for a cup of coffee, or leave us a message:</p>
+                    <h2 id="contact">Contact Me</h2>
+                    <p>Swing by for a cup of coffee, or leave me a message:</p>
                   </div>
                   <div class="row">
                     <div class="column">
