update info. in RA@NCCU&AS

--- a/index.html
+++ b/index.html
@@ -170,9 +170,15 @@
                                                         <div class="col-md-10">
                                                             <font color="gray"> 
                                                                 <ol>
-                                                                <li>Built deep neural network architecture—XRR—for risk ranking with financial reports, yielding up to 7.4% improvement according to two ranking correlation metrics</li>
-                                                                <li>Constructed framework combining item content embedding, time series, and channel preferences to extract and analyze crucial factors in TV program recommendation</li>
-                                                                <li>Proposed algorithm to aggregate nearby contextual profiles on time series and channel preferences, yielding up to 20% improvement in recommendation quality in linear TV services</li>
+                                                                <li>Built deep neural network architecture—XRR—for risk ranking with financial reports, yielding up to 7.4% improvement according to two ranking correlation metrics and published at AAAI-20 Workshop on KDF
+                                                                </li>
+                                                                <li>
+                                                                Created platform for investors or financial experts to spot risk-related information and facilitate analyses of soft information in financial reports by deploying Express Web framework
+                                                                </li>>
+                                                                <li>Extracted and analyzed crucial factors (User behaviors and User preferences) on a real-world TV dataset and formally defined the problem of TV Recommendation
+                                                                </li>
+                                                                <li>Proposed algorithm to aggregate nearby item content embedding, time series, and channel preferences, yielding up to 20% improvement in recommendation quality in linear TV services
+                                                                </li>
                                                                 <ol>
                                                             </font>
                                                         </div>
