--- a/index.html
+++ b/index.html
@@ -157,6 +157,25 @@
                                         </div>
                                         <ul class="timeline">
                                             <li class="open">
+                                                <div class="date"><font color=black>Jun 2021 ~ Sept 2021</font></div>
+                                                <div class="circle"></div>
+                                                <div class="data">
+                                                    <div class="subject">
+                                                        Amazon Web Services, Amazon.com<br> Software Development Engineer Intern
+                                                    </div>
+                                                    <div class="text row">
+                                                        <div class="col-md-2">
+                                                            <a href="https://aws.amazon.com"><img alt="image" class="thumbnail img-responsive" src="img/aws-logo.png"></a>
+                                                        </div>
+                                                        <div class="col-md-10">
+                                                            <font color="gray"> 
+                                                                TBD
+                                                            </font>
+                                                        </div>
+                                                    </div>
+                                                </div>
+                                            </li>
+                                            <li class="open">
                                                 <div class="date"><font color=black>Oct 2019 ~ Apr 2020</font></div>
                                                 <div class="circle"></div>
                                                 <div class="data">
@@ -174,7 +193,7 @@
                                                                 </li>
                                                                 <li>
                                                                 Created platform for investors or financial experts to spot risk-related information and facilitate analyses of soft information in financial reports by deploying Express Web framework
-                                                                </li>>
+                                                                </li>
                                                                 <li>Extracted and analyzed crucial factors (User behaviors and User preferences) on a real-world TV dataset and formally defined the problem of TV Recommendation
                                                                 </li>
                                                                 <li>Proposed algorithm to aggregate nearby item content embedding, time series, and channel preferences, yielding up to 20% improvement in recommendation quality in linear TV services
@@ -375,6 +394,32 @@
                                     <h3>Projects</h3>
                                 </div>
                                 <ul class="ul-withdetails">
+                                    <li>
+                                        <div class="row">
+                                            <div class="col-sm-4 col-md-3">
+                                                <div class="image">
+                                                    <img alt="image" src="img/p1cky_logo.png" class="img-responsive">
+                                                    <div class="imageoverlay">
+                                                        <i class="fa fa-search"></i>
+                                                    </div>
+                                                </div>
+                                            </div>
+                                            <div class="col-sm-8 col-md-9">
+                                                <div class="meta">
+                                                    <h3 style="color:black">P1cky</h3>
+                                                    <p style="color:black">Social application that picks 1 restaurant based on users’ requirements, favorites, or their friends’ experiences</p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="details" style="color:black">
+                                            <p>Developed full-stack system with Response Website Design layouts by using React.js
+                                            </p>
+                                            <p>Design NoSQL database schema with Cloud Firestore and fetched desired restaurants’ information by integrated Yelp
+                                                Business API, and Google Map API</p>
+                                            <p>To check out the introduction click <a href="https://www.youtube.com/watch?v=XZIl4N5HR_k">here</a>.
+                                            <p>Our code is publicly available <a href="https://github.com/jackyjackylin/P1cky">here</a></p>
+                                        </div>
+                                    </li>
                                     <li>
                                         <div class="row">
                                             <div class="col-sm-4 col-md-3">
