--- a/index.html
+++ b/index.html
@@ -138,8 +138,8 @@
                                     <div class="col-sm-7 col-sm-offset-7 col-md-7 col-md-offset-7">
                                         <h3 class="title"><font color="white"> Ting-Wei Lin </font> </h3>
                                         <p><font color="white">I am Jacky from Taiwan, currently a Master's Student in Computer Science at the University of California, Irvine.</p>
-                                        <p><font color="white">I am always into the community side of Computer Science, also have equipped with insights derived from fields beyond software development. From my previous internship at DHL Express and research experience in Academia Sinica, I am interested in utilizing big data techniques in systems and integrate them into people’s lives.</p>
-                                        <p><font color="white">I am now looking for summer internship opportunities in the summer of 2021. If your organization is ambitious and indeed want to make the world a better place, USE ME. Let me help! :)</p>
+                                        <p><font color="white">I am always into the community side of Computer Science, also have equipped with insights derived from fields beyond software development. From my internships at Amazon and DHL Express and research experience in Academia Sinica, I am interested in utilizing big data techniques in systems and integrate them into people’s lives.</p>
+                                        <p><font color="white">I am now looking for Full time Software Engineer opportunities in the spring of 2022. If your organization is ambitious and indeed want to make the world a better place, USE ME. Let me help! :)</p>
                                     </div>  
                                 </div>
                             </div>        
@@ -169,7 +169,17 @@
                                                         </div>
                                                         <div class="col-md-10">
                                                             <font color="gray"> 
-                                                                TBD
+                                                                <ol>
+                                                                    <li>Designed Points of presence (POP) capacity measurement on the basic of requests per second and network bandwidth in
+                                                                        bytes per second, improving 10% accuracy on projecting big events’ CPU utilization
+                                                                    </li>
+                                                                    <li>
+                                                                        Integrated POP’s capacity into a full-stack system with heatmap layout with React.js, Express.js, and AWS DJS, RDS,
+                                                                        RedShift, S3, API Gateway, and Lambda, accurately displaying status of each POP and host
+                                                                    </li>
+                                                                    <li>Promoted POP capacity measurement system, increasing 30% efficiency of related teams’ works for checking POP’s status
+                                                                    </li>
+                                                                    <ol>
                                                             </font>
                                                         </div>
                                                     </div>
@@ -213,7 +223,7 @@
                                                     </div>
                                                     <div class="text row">
                                                         <div class="col-md-2">
-                                                            <a href="https://www.dhltaiwanconnects.com"><img alt="image" class="thumbnail img-responsive" src="img/DHL.png" ></a>
+                                                            <a href="https://www.dhltaiwanconnects.com"><img alt="image" width="100%" class="thumbnail img-responsive" src="img/DHL.png" ></a>
                                                         </div>
                                                         <div class="col-md-10">
                                                             <font color="gray"> 
